--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,19 @@ address {
 
 /* #region Hero */
 .hero {
-  background-color: #2e2f42;
+  /* background-color: #L2e2f42; */
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/hero-img.jpg);
+  width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+  background-repeat: no-repeat;
+  background-size: cover;
+
   padding: 188px 0;
   text-align: center;
 }
