--- a/css/styles.css
+++ b/css/styles.css
@@ -142,7 +142,7 @@ address {
 
 /* #region Hero */
 .hero {
-  /* background-color: #L2e2f42; */
+  background-color: #2e2f42;
   background-image: linear-gradient(
       to bottom,
       rgba(46, 47, 66, 0.7),
