--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ address {
       rgba(46, 47, 66, 0.7)
     ),
     url(../images/hero-img.jpg);
-  width: 1440px;
+  max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
   background-repeat: no-repeat;
