--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,7 @@ img {
   align-items: center;
 }
 .nav-item {
+  position: relative;
 }
 .logo {
   margin-right: 76px;
@@ -119,9 +120,23 @@ img {
 .nav-link:hover,
 .address-link:hover,
 .nav-link:focus,
-.address-link:focus,
-.nav-link-active {
+.address-link:focus {
   color: #404bbf;
+}
+.nav-link.active {
+  color: #404bbf;
+}
+
+.nav-link.active::after {
+  position: absolute;
+  bottom: -1px;
+  /* transform: translateY(21px); */
+  content: '';
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
 }
 
 address {
@@ -216,6 +231,25 @@ address {
   width: calc((100% - 3 * 24px) / 4);
 }
 
+.benefits-icon-wrapper {
+  display: flex;
+  width: 100%;
+  padding: 24px 0;
+  justify-content: center;
+  align-items: center;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background-color: #f4f4fd;
+}
+
+/* .benefits-icon {
+  width: 100%;
+  padding: 24px 0;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  background-color: #f4f4fd;
+} */
+
 .benefits-item .item-title {
   margin-bottom: 8px;
 }
@@ -246,11 +280,40 @@ address {
 
 .team-text {
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .team-item .description {
   padding-top: 32px;
   padding-bottom: 32px;
+}
+
+.socials {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+  align-items: center;
+}
+.socials-item {
+  width: 40px;
+  height: 40px;
+}
+.socials-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+}
+.socials-link:hover,
+.socials-link:focus {
+  background-color: #404bbf;
+}
+
+.socials-icon {
+  fill: #f4f4fd;
 }
 /* #endregion */
 
