--- a/css/styles.css
+++ b/css/styles.css
@@ -234,24 +234,17 @@ address {
   width: calc((100% - 3 * 24px) / 4);
 }
 
-.benefits-icon-wrapper {
+.benefits-thumb {
   display: flex;
   width: 100%;
   padding: 24px 0;
   justify-content: center;
   align-items: center;
+  margin-bottom: 8px;
   border-radius: 4px;
   border: 1px solid #8e8f99;
   background-color: #f4f4fd;
 }
-
-/* .benefits-icon {
-  width: 100%;
-  padding: 24px 0;
-  border-radius: 4px;
-  border: 1px solid #8e8f99;
-  background-color: #f4f4fd;
-} */
 
 .benefits-item .item-title {
   margin-bottom: 8px;
@@ -337,6 +330,31 @@ address {
 }
 .portfolio-item {
   width: calc((100% - 2 * 24px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-item:hover {
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+.portfolio-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #f4f4fd;
+  background-color: #4d5ae5;
+}
+.portfolio-item:hover .overlay {
+  transform: translateY(0);
 }
 
 .portfolio-item:nth-last-child(-n + 3) {
