--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,9 @@ img {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .nav {
@@ -131,7 +134,7 @@ img {
 .nav-link.active::after {
   position: absolute;
   bottom: -1px;
-    /* transform: translateY(20px); */
+  /* transform: translateY(20px); */
   content: '';
   display: block;
   width: 100%;
@@ -171,7 +174,7 @@ address {
   margin-right: auto;
   background-repeat: no-repeat;
   background-size: cover;
-
+  background-position: center;
   padding: 188px 0;
   text-align: center;
 }
@@ -237,6 +240,7 @@ address {
 .benefits-thumb {
   display: flex;
   width: 100%;
+  height: 112px;
   padding: 24px 0;
   justify-content: center;
   align-items: center;
@@ -352,7 +356,11 @@ address {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #f4f4fd;
   background-color: #4d5ae5;
+    padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
 }
+
 .portfolio-item:hover .overlay {
   transform: translateY(0);
 }
@@ -394,12 +402,12 @@ address {
 
 .footer-container {
   display: flex;
-  gap: 120px;
-  /* align-items: baseline; */
+  /* gap: 120px; */
+  align-items: baseline;
 }
 
 .footer-wrapper {
-  /* margin-right: 120px; */
+  margin-right: 120px;
 }
 .footer-socials {
   gap: 16px;
@@ -408,6 +416,7 @@ address {
 .footer-socials-text {
   color: #fff;
   margin-bottom: 16px;
+  font-weight: 500;
 }
 
 .footer-socials-link {
