--- a/css/styles.css
+++ b/css/styles.css
@@ -356,9 +356,7 @@ address {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #f4f4fd;
   background-color: #4d5ae5;
-    padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px;
 }
 
 .portfolio-item:hover .overlay {
