--- a/css/styles.css
+++ b/css/styles.css
@@ -73,15 +73,16 @@ img {
 
 /* #region Header */
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   border-bottom: 1px solid #e7e9fc;
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
-
+.header-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 .nav {
   display: flex;
   align-items: center;
@@ -134,7 +135,6 @@ img {
 .nav-link.active::after {
   position: absolute;
   bottom: -1px;
-  /* transform: translateY(20px); */
   content: '';
   display: block;
   width: 100%;
